# MyApplication

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  C_preprocess.cpp  main.cpp  page_dewarp.cpp  page_dewarp.hpp
app/src/main/java/com/example/builddewarp/: CaptureImage.java  ImageToText.java  MainActivity.java  OcrManager.java  ResultActivity.java
app/src/main/res/layout/: activity_capture_image.xml  activity_main.xml  activity_result.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
